// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Android BpkFlare should render correctly 1`] = `
<AndroidBPKFlareView
  pointerDirection="down"
  style={
    Array [
      Object {
        "flex": 1,
      },
    ]
  }
>
  <View />
</AndroidBPKFlareView>
`;

exports[`Android BpkFlare should render correctly with arbitrary props 1`] = `
<AndroidBPKFlareView
  pointerDirection="down"
  style={
    Array [
      Object {
        "flex": 1,
      },
    ]
  }
  testID="123"
>
  <View />
</AndroidBPKFlareView>
`;

exports[`Android BpkFlare should render correctly with custom style 1`] = `
<AndroidBPKFlareView
  pointerDirection="down"
  style={
    Array [
      Object {
        "flex": 1,
      },
      Object {
        "flex": 1,
      },
    ]
  }
>
  <View />
</AndroidBPKFlareView>
`;

exports[`Android BpkFlare should render correctly with pointerDirection=up 1`] = `
<AndroidBPKFlareView
  pointerDirection="up"
  style={
    Array [
      Object {
        "flex": 1,
      },
    ]
  }
>
  <View />
</AndroidBPKFlareView>
`;
